# assembler-8bit

./: Cargo.toml  README.md
field_size/: Cargo.toml
field_size/src/: lib.rs
field_size_macro/: Cargo.toml
field_size_macro/src/: lib.rs
field_size_macro/tests/: smoke.rs
field_size_macro/tests/failing/: non_enum.rs  non_enum.stderr
gen_microcode/: Cargo.toml
gen_microcode/src/: lib.rs
gen_microcode_macro/: Cargo.toml
gen_microcode_macro/src/: lib.rs
gen_microcode_macro/tests/: smoke.rs
src/: main.rs  microcode.rs  output_datastructures.rs
