[package]
name = "assembler-8bit"
version = "0.1.0"
authors = ["Henri Schmidt <henri@reschmi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
gen_microcode = { path = "./gen_microcode" }
gen_microcode_macro = { path = "./gen_microcode_macro" }
field_size = { path = "./field_size" }
field_size_macro = { path = "./field_size_macro" }
