[package]
name = "field_size_macro"
version = "0.1.0"
authors = ["Henri Schmidt <henri@reschmi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trybuild = "1.0.25"
syn = "1.0.5"
quote = "1.0.2"
field_size = { path = "../field_size" }

[lib]
proc-macro = true

